--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "parcel": "^2.7.0"
   },
   "devDependencies": {
-    "parcel-plugin-static-files-copy": "^2.6.0",
+    "parcel-plugin-static-files-copy": "^2.6.0"
   },
   "staticFiles": {
     "staticPath": "./assets/data/"
